Fix: adjust vertical spacing in footer

--- a/docs/_src/docs.scss
+++ b/docs/_src/docs.scss
@@ -13,6 +13,7 @@
 footer .contact-address {
     order: 99;
     flex-basis: 100%;
+    padding-top: 0px !important;
 }
 
 footer .contact-regdetails {
